Populate HTML from array

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+    <script src="https://kit.fontawesome.com/eb9ab0d66a.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <title>Todo Application</title>
 </head>
+
 <body>
-    <h1>Hello webpack!</h1>
+    <div class="centered">
+        <div class="row">
+            <p>Today's To Do</p>
+            <i class="fa-solid fa-repeat"></i>
+        </div>
+        <div class="row">
+            <input placeholder="Add to your list...">
+            <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="task-section">
+            <!-- Tasks section -->
+        </div>
+        <div class="clear">
+            <p>Clear all completed</p>
+        </div>
+    </div>
 </body>
+
 </html>
